# quran_imam_shahid

./: AI_ASSISTANT_PLAN.md  HANDOVER.md  HANDOVER_2026-06-20.md  HANDOVER_2026-06-23.md  HANDOVER_2026-06-24.md  IMPLEMENTATION_PLAN.md  REQUIREMENTS.md  TECHNICAL_DESIGN.md  readme.md
app/: README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/assets/audio/: reciters.json
app/lib/: main.dart
app/lib/core/: api_client.dart  config.dart  intents.dart  local_content.dart  providers.dart  theme.dart  theme_controller.dart
app/lib/data/models/: reciter.dart  surah.dart  tafsir.dart
app/lib/features/ai/: ai_cost_pending.dart  ai_input_bar.dart  (+9 more)
app/lib/widgets/: app_background.dart  app_card.dart  galaxy_background.dart  glass.dart
app/test/: intents_test.dart
gateway/: .env.example  README.md  pyproject.toml
gateway/qis/: __init__.py  auth.py  config.py  main.py
gateway/qis/ai/: claude_cli.py  openai_provider.py  provider.py
gateway/qis/content/: reciters.json  reciters.py  store.py  tafsir.py
gateway/qis/content/seed/: quran_001.json  quran_112.json  tafsir_seed.json
gateway/qis/content/tafsir_data/: SOURCES.md
gateway/qis/routes/: audio.py  health.py  quran.py  reason.py  tafsir_book.py  voice.py
gateway/qis/schema/: intents.py  models.py
gateway/qis/voice/: classify.py  speech.py
gateway/tests/: conftest.py  test_audio.py  test_health_auth.py  test_intents.py  test_quran.py  test_reason_voice.py  test_speech.py  test_tafsir_book.py
tools/lexicon/: README.md  add_book.py  build_lexicon.py  build_wordroot.py  scrape_mufradat.py
(+23 files in other folders)
